Mikrointerakcje: Wprowadzenie subtelnych animacji przy dodawaniu, usuwan

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -125,5 +125,14 @@
     "priority": "Low",
     "status": "Backlog",
     "subTasks": []
+  },
+  {
+    "id": "TASK-1752745199145",
+    "name": "3",
+    "description": "rrr",
+    "assignee": "david@example.com",
+    "priority": "Medium",
+    "status": "Todo",
+    "parentId": null
   }
 ]
