I see this error with the app, reported by NextJS, please fix it. The er

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -3,7 +3,7 @@
     "id": "TASK-1",
     "name": "Implementacja uwierzytelniania użytkowników",
     "description": "Opracowanie i integracja bezpiecznego systemu uwierzytelniania użytkowników z wykorzystaniem JWT i OAuth 2.0.",
-    "assignee": "alice@example.com",
+    "assignees": ["alice@example.com"],
     "priority": "Critical",
     "status": "In Progress",
     "subTasks": [
@@ -31,7 +31,7 @@
     "id": "TASK-2",
     "name": "Budowa interfejsu pulpitu",
     "description": "Stworzenie głównego interfejsu pulpitu z wszystkimi wymaganymi widżetami i komponentami.",
-    "assignee": "bob@example.com",
+    "assignees": ["bob@example.com", "alice@example.com"],
     "priority": "High",
     "status": "In Progress",
     "subTasks": [
@@ -65,7 +65,7 @@
     "id": "TASK-3",
     "name": "Konfiguracja punktu końcowego analizy AI",
     "description": "Stworzenie usługi backendowej do obsługi żądań analizy AI z użyciem Genkit.",
-    "assignee": "charlie@example.com",
+    "assignees": ["charlie@example.com"],
     "priority": "High",
     "status": "Done",
     "subTasks": [
@@ -93,7 +93,7 @@
     "id": "TASK-4",
     "name": "Refaktoryzacja starszego kodu",
     "description": "Poprawa wydajności i łatwości utrzymania poprzez refaktoryzację starej bazy kodu.",
-    "assignee": "david@example.com",
+    "assignees": ["david@example.com"],
     "priority": "Medium",
     "status": "In Progress",
     "subTasks": [
@@ -121,16 +121,16 @@
     "id": "TASK-5",
     "name": "Dokumentacja dla użytkownika",
     "description": "Napisanie obszernej dokumentacji dla użytkowników końcowych.",
-    "assignee": "eve@example.com",
+    "assignees": ["eve@example.com"],
     "priority": "Low",
     "status": "Backlog",
     "subTasks": []
   },
   {
     "id": "TASK-1752745199145",
-    "name": "3",
-    "description": "rrr",
-    "assignee": "david@example.com",
+    "name": "Aktualizacja UI/UX",
+    "description": "Odświeżenie interfejsu użytkownika aplikacji.",
+    "assignees": ["david@example.com", "bob@example.com"],
     "priority": "Medium",
     "status": "Done",
     "parentId": "TASK-4",
