--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.5.7",
     "genkit": "^1.14.1",
-    "genkitx-openai": "*",
+    "@genkit-ai/googleai": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
