dodaj widok z rposba o pomoc gdzi ektos mzo ezglosic si e o pomco z dnay

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,1 +1,14 @@
-[]
+[
+  {
+    "id": "task-1753186587975",
+    "name": "rrrrr",
+    "description": "rrrr",
+    "assignees": [
+      "tkozlowski@lspgroup.pl"
+    ],
+    "priority": "Medium",
+    "status": "Todo",
+    "parentId": null,
+    "dueDate": "2025-07-22T22:00:00.000Z"
+  }
+]
