--- a/data/tasks.json
+++ b/data/tasks.json
@@ -9,6 +9,7 @@
     "priority": "Medium",
     "status": "Todo",
     "parentId": null,
-    "dueDate": "2025-07-22T22:00:00.000Z"
+    "dueDate": "2025-07-22T22:00:00.000Z",
+    "needsHelp": true
   }
 ]
